--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cpr": "^3.0.1",
     "debug": "^4.1.1",
     "execa": "^4.0.0",
-    "@phated/git-diff-apply": "0.22.10",
+    "git-diff-apply": "npm:@phated/git-diff-apply@0.22.10",
     "https-proxy-agent": "^5.0.0",
     "inquirer": "^7.0.0",
     "merge-package.json": "^3.1.8",
